--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ main{
 }
 header, footer {
     text-align: center;
-    background-color: black;
+    background-color: rgb(109, 27, 218);
     color:white;
     padding:50px;
 }
